<resources>
    <string name="app_name">UIZadatak - Poruke</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer_test">NavigationDrawerTest</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="menu_firstscreen_navigational_drawer">Navigation drawer</string>
    <string name="title_activity_moj_activity_sa_navigation_drawerom">
        MojActivitySaNavigationDrawerom
    </string>
    <string name="cma">Cma</string>
    <string name="menu_selection_moj_navigational_drawer">Moj navigational drawer</string>
    <string-array name="lista_izbora_nav_drawer">
        <item>Prvi</item>
        <item>Drugi</item>
        <item>Treci</item>
        <item>Cetvrti</item>
        <item>Peti</item>
    </string-array>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="menu_moj_view_pager">Moj view pager</string>
    <string name="action_new_message_text">New message</string>
    <string name="action_search_title">Search</string>
    <string name="title_activity_message_view">MessageView</string>
    <string name="title_activity_activity_message_view">ActivityMessageView</string>
</resources>
