<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FirstScreen">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/action_navigational_drawer"
        android:title="@string/menu_firstscreen_navigational_drawer"
        android:orderInCategory="99"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_navigational_drawer_moj"
        android:title="@string/menu_selection_moj_navigational_drawer"
        android:orderInCategory="98"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_view_pager"
        android:title="@string/menu_moj_view_pager"
        android:orderInCategory="97"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_new_message"
        android:title="@string/action_new_message_text"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="95"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search_title"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="96"
        app:showAsAction="ifRoom"
        />
</menu>
